--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^7.0.0",
     "autoprefixer": "10.4.14",
     "next": "13.3.1",
     "postcss": "8.4.23",
