--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
+    "predeploy": "npm run build",
+    "deploy": "netlify-deploy",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,5 +19,8 @@
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.5.4",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
