--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
+
 {
   "name": "mentorkim.net",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "predeploy": "npm run build",
-    "deploy": "netlify-deploy",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "netlify-deploy"
   },
   "dependencies": {
     "@svgr/webpack": "^7.0.0",
@@ -19,8 +19,5 @@
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.5.4",
     "tailwindcss": "3.3.1"
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
   }
 }
